--- a/EzOrder(Cus)/View/Order/Order.storyboard
+++ b/EzOrder(Cus)/View/Order/Order.storyboard
@@ -257,7 +257,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <segue destination="D3O-QC-PZA" kind="show" id="zb1-gg-yiR"/>
+                                            <segue destination="D3O-QC-PZA" kind="show" identifier="cartSegue" id="zb1-gg-yiR"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="總共：0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFj-Sz-QMY">
@@ -311,10 +311,10 @@
             </objects>
             <point key="canvasLocation" x="1664.8" y="192.95352323838082"/>
         </scene>
-        <!--Shopping Cart View Controller-->
+        <!--Cart View Controller-->
         <scene sceneID="7PJ-4y-4vJ">
             <objects>
-                <viewController storyboardIdentifier="ShoppingCartViewController" id="D3O-QC-PZA" customClass="ShoppingCartViewController" customModule="EzOrder_Cus_" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ShoppingCartViewController" id="D3O-QC-PZA" customClass="CartViewController" customModule="EzOrder_Cus_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ifp-Ek-iuJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -323,7 +323,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="514"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="120" id="eGn-aw-BBb">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cartCell" rowHeight="120" id="eGn-aw-BBb" customClass="CartTableViewCell" customModule="EzOrder_Cus_" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eGn-aw-BBb" id="Rxh-Sk-nZP">
@@ -331,18 +331,25 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6G1-zM-Mcm">
-                                                    <rect key="frame" x="15" y="9" width="100" height="100"/>
+                                                    <rect key="frame" x="15" y="9" width="150" height="100"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="滷肉飯" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VwO-9M-2jW">
-                                                    <rect key="frame" x="123" y="18" width="119" height="21"/>
+                                                    <rect key="frame" x="173" y="11" width="62" height="24"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNS-4f-BOf">
-                                                    <rect key="frame" x="123" y="47" width="38" height="24"/>
+                                                    <rect key="frame" x="173" y="43" width="38" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="數量 : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SA3-dy-fQ3">
+                                                    <rect key="frame" x="173" y="75" width="68" height="24"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
@@ -350,8 +357,18 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="amountLabel" destination="SA3-dy-fQ3" id="UDC-tJ-XDO"/>
+                                            <outlet property="foodImageView" destination="6G1-zM-Mcm" id="vYF-JZ-qUT"/>
+                                            <outlet property="foodNameLabel" destination="VwO-9M-2jW" id="VoJ-Uj-Mws"/>
+                                            <outlet property="foodPriceLabel" destination="iNS-4f-BOf" id="Jwi-za-mpg"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="D3O-QC-PZA" id="Kjv-zA-vjl"/>
+                                    <outlet property="delegate" destination="D3O-QC-PZA" id="A5b-dS-wb1"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nQW-cQ-dqZ">
                                 <rect key="frame" x="0.0" y="578" width="375" height="40"/>
@@ -401,6 +418,8 @@
                         <viewLayoutGuide key="safeArea" id="7Tt-M4-x6P"/>
                     </view>
                     <connections>
+                        <outlet property="cartTableView" destination="qa5-p4-eAU" id="eDC-jO-500"/>
+                        <outlet property="totalPriceLabel" destination="ovP-LT-YNS" id="aKA-of-dJF"/>
                         <segue destination="9uh-n9-nW0" kind="unwind" identifier="unwindSegueToProgress" unwindAction="unwindSegueToProgressWithSegue:" id="X5c-Nj-8Ik"/>
                     </connections>
                 </viewController>
